New version of plugin, specifies new exports: https://github.com/google/google-java-format/blob/master/README.md#intellij-jre-config
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>